# Backend/src/modules/authstaff/authstaff.controller.js
@@ -3,11 +3,21 @@ import jwt from "jsonwebtoken";
 
 export const registerSuperAdminController = async (req, res) => {
     try {
-        const { username, email, password ,role_id } = req.body;
-        const user = await registerSuperAdmin({ username, email, password ,role_id });
+        console.log("Register Super Admin Request Body:", req.body);
+        console.log("Register Super Admin Request File:", req.file);
+
+        const { username, email, password, role_id } = req.body;
+
+        const profile_image = req.file?.path || null;
+
+        const user = await registerSuperAdmin({ username, email, password, role_id, profile_image });
         res.status(201).json(user);
 
     } catch (error) {
+        console.error("Error in registerSuperAdminController:", error);
+        if (error.message === "Email already exists" || error.code === '23505') {
+            return res.status(409).json({ error: "Email already exists" });
+        }
         res.status(500).json({ error: error.message });
     }
 };
